Update dashboard layout

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun May 11 15:57:43 ICT 2025
-sdk.dir=C\:\\Users\\haivi\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/kinh/Android/Sdk
